Fixes #100 - truncate long agency name
Agency name would get cropped if it was greater than 2 lines. This
commit adds an ellipsis to the name if that happens using proprietary
-webkit- CSS attributes.

--- a/www/less/application.less
+++ b/www/less/application.less
@@ -979,9 +979,6 @@ body {
         padding-bottom: 10px;
       }
       .source-name {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        -webkit-text-overflow: ellipsis;
         display: inline-block;
         position: relative;
         vertical-align: top;
@@ -991,6 +988,14 @@ body {
         width: 80%;
         margin: 0 0 0 0;
         height: 48px;
+        span
+        {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          display: -webkit-box;
+        }
       }
       .source-logo {
         display: inline-block;
